--- a/src/public/static/style.css
+++ b/src/public/static/style.css
@@ -107,7 +107,18 @@ div#messageFormContentGrid {
 	box-shadow: 0px 0px 0px 2px #7a7a7a;
 }
 
-input[name=messageText], button[name=sendMessageButton] {
+form#signinForm {
+	position: absolute;
+	z-index: 3;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: inherit;
+	font-size: 200%;
+}
+
+input, button {
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
@@ -116,11 +127,11 @@ input[name=messageText], button[name=sendMessageButton] {
 	font-size: large;
 }
 
-input[name=messageText] {
+input {
 	padding-left: 10px;
 }
 
-button[name=sendMessageButton] {
+button {
 	background: #6600ba;
 	color: #ffffff;
 }
@@ -133,6 +144,21 @@ div.Message {
 
 span.SenderUsername {
 	font-weight: bold;
+}
+
+div#signinFormContentWrapper {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 80%;
+	transform: translate(-50%);
+}
+
+div#signinFormContentWrapperGrid {
+	display: grid;
+	grid-template-columns: 70% 30%;
+	margin-top: 10px;
+	width: 54%;
 }
 
 @media only screen and (max-width: 720px) {
@@ -148,5 +174,7 @@ span.SenderUsername {
 		padding-left: 20px;
 	}
 
-
+	div#signinFormContentWrapperGrid {
+		width: 95%;
+	}
 }
